BG nav fix on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,14 @@ footer {
   -ms-user-select: none;
   user-select: none;
 }
+#sideNav {
+  background-color: #389bbd !important;
+  background: linear-gradient(
+    45deg,
+    hsl(195, 100%, 20%) 10%,
+    hsl(195, 54%, 48%) 100%
+  );
+}
 .apps {
   margin-left: 0 !important;
 }
@@ -1190,12 +1198,6 @@ a:active {
     flex-direction: column;
     width: 17rem;
     height: 100vh;
-    background-color: #389bbd !important;
-    background: linear-gradient(
-      45deg,
-      hsl(195, 100%, 20%) 10%,
-      hsl(195, 54%, 48%) 100%
-    );
   }
   #sideNav .navbar-brand {
     display: flex;
